--- a/the-90s-domination.html
+++ b/the-90s-domination.html
@@ -1,6 +1,17 @@
-The 90s Domination
+<!doctype html>
+<html>
+<head>
+  <title>The 90s Domination</title>
+</head>
+<body style="background-color:lavender;”>
+
+<p style="font: bold 52px impact;color:black;text-align:center;">The 90s Domination</p>
+<hr/>
+<h4 align = "center" > Nintendo released a console in 1991, the sixteen-bit Super NES. They also released the Game Boy Color which was the 1st time the device would involve colored gaming and subsequently Gunpei Yoko's last design. Sega introduced compact discs or CDs for the first time in 1995. But all consoles in the 90s would fall to Sony's dominate release of the Playstation in 1994.This is because Sony was able to secure a lot of exclusive titles for the Playstation. Before then, Sega and Nintendo had ruled the console world for at least a decade. Sony came out with two variations of the console, the original and the Dual Shock. Users could interchange memory card ports for additional memory. In short, Sony really changed the game. </h4> 
+<hr/>
+<a href="https://gametrog.com/playstation-1-one-information-specs-versions/?srsltid=AfmBOoqI9OLXmyLFgOmvCYCmU4P64WrwUesL3fuD68h6Dl96aOiaCYpe">Playstation on Gametrog no author listed</a>
 
 
-Nintendo released a console in 1991, the sixteen-bit Super NES. They also released the Game Boy Color which was the 1st time the device would involve colored gaming and subsequently Yokoiâ€™s last design. Sega introduced compact discs or CDs for the first time in 1995. But all consoles in the 90s would fall to Sony's dominate release of the Playstation in 1994.
+<img src=https://m.media-amazon.com/images/I/51Ojfhv3l7L.jpg width= "300" height= "300">
 
 
